checkout almost completed

--- a/ZeldaWebsite/Views/Cart/Index.cshtml
+++ b/ZeldaWebsite/Views/Cart/Index.cshtml
@@ -100,7 +100,7 @@
 
 							<div class="row">
 								<div class="col-md-12">
-									<a href="#" class="btn mb-10" id="checkoutButton" >Proceed To Checkout</a>
+									<a asp-action="Checkout" class="btn mb-10" id="checkoutButton" >Proceed To Checkout</a>
 								</div>
 							</div>
 						</div>
@@ -111,28 +111,28 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script>
-	$(document).ready(function () {
-		$("#checkoutButton").on("click", function (e) {
-			e.preventDefault();
+		/*$(document).ready(function () {
+			$("#checkoutButton").on("click", function (e) {
+				e.preventDefault();
 
-			// Perform an AJAX request to the Order/Checkout action
-			$.ajax({
-				url: '@Url.Action("Checkout", "Order")',
-				type: "POST",
-				data: JSON.stringify(@Model),
-				contentType: "application/json; charset=utf-8",
-				success: function (result) {
-					// Redirect to the Checkout action
-					window.location.href = '@Url.Action("Checkout", "Order")';
-				},
-				error: function (xhr, status, error) {
-					console.error("Error during checkout: " + error);
-				}
+				// Perform an AJAX request to the Order/Checkout action
+				$.ajax({
+					url: '@Url.Action("Checkout", "Order")',
+					type: "POST",
+					data: JSON.stringify(@Model),
+					contentType: "application/json; charset=utf-8",
+					success: function (result) {
+						// Redirect to the Checkout action
+						window.location.href = '@Url.Action("Checkout", "Order")';
+					},
+					error: function (xhr, status, error) {
+						console.error("Error during checkout: " + error);
+					}
+				});
 			});
 		});
-	});
-	 
-</script>
+	 */
+	</script>
 
 </main>
 
