--- a/ZeldaWebsite/Views/Cart/Index.cshtml
+++ b/ZeldaWebsite/Views/Cart/Index.cshtml
@@ -51,7 +51,7 @@
 										<td>@cartItem.Size liter</td>
 
 										<td>@cartItem.Price.ToString("F2")</td>
-											<td><a href="#" class="genric-btn danger-border radius" width="20" height="20">X</a></td>
+											<td><a asp-action="RemoveFromCart" asp-route-id="@cartItem.ItemId" class="genric-btn danger-border radius" width="20" height="20">X</a></td>
 										</tr>
 								} 
 							</tbody>
@@ -109,30 +109,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script>
-		/*$(document).ready(function () {
-			$("#checkoutButton").on("click", function (e) {
-				e.preventDefault();
-
-				// Perform an AJAX request to the Order/Checkout action
-				$.ajax({
-					url: '@Url.Action("Checkout", "Order")',
-					type: "POST",
-					data: JSON.stringify(@Model),
-					contentType: "application/json; charset=utf-8",
-					success: function (result) {
-						// Redirect to the Checkout action
-						window.location.href = '@Url.Action("Checkout", "Order")';
-					},
-					error: function (xhr, status, error) {
-						console.error("Error during checkout: " + error);
-					}
-				});
-			});
-		});
-	 */
-	</script>
+	
 
 </main>
 
