--- a/ZeldaWebsite/Views/Shared/ManagerLayout.cshtml
+++ b/ZeldaWebsite/Views/Shared/ManagerLayout.cshtml
@@ -25,8 +25,11 @@
     <link rel="stylesheet" href="~/assets/css/slick.css">
     <link rel="stylesheet" href="~/assets/css/nice-select.css">
     <link rel="stylesheet" href="~/assets/css/style.css">
-   
-     
+
+    <!-- chartist CSS -->
+    <link href="~/assets/node_modules/morrisjs/morris.css" rel="stylesheet">
+    <!--c3 plugins CSS -->
+    <link href="~/assets/node_modules/c3-master/c3.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- ? Preloader Start -->
@@ -185,6 +188,32 @@
     <script src="~/assets/js/main.js"></script>
 
     <script src="~/assets/js/plus_minus_button.js"></script>
-
+    <!-- ============================================================== -->
+    <!-- All Jquery -->
+    <!-- ============================================================== -->
+    <script src="../assets/node_modules/jquery/jquery-3.2.1.min.js"></script>
+    <!-- Bootstrap popper Core JavaScript -->
+    <script src="../assets/node_modules/popper/popper.min.js"></script>
+    <script src="../assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- slimscrollbar scrollbar JavaScript -->
+    <script src="dist/js/perfect-scrollbar.jquery.min.js"></script>
+    <!--Wave Effects -->
+    <script src="dist/js/waves.js"></script>
+    <!--Menu sidebar -->
+    <script src="dist/js/sidebarmenu.js"></script>
+    <!--Custom JavaScript -->
+    <script src="dist/js/custom.min.js"></script>
+    <!-- ============================================================== -->
+    <!-- This page plugins -->
+    <!-- ============================================================== -->
+    <!--morris JavaScript -->
+    <script src="~/assets/node_modules/raphael/raphael-min.js"></script>
+    <script src="~/assets/node_modules/morrisjs/morris.min.js"></script>
+    <script src="~/assets/node_modules/jquery-sparkline/jquery.sparkline.min.js"></script>
+    <!--c3 JavaScript -->
+    <script src="~/assets/node_modules/d3/d3.min.js"></script>
+    <script src="~/assets/node_modules/c3-master/c3.min.js"></script>
+    <!-- Chart JS -->
+    <script src="~/assets/dist/js/dashboard1.js"></script>
 </body>
 </html>
