--- a/ZeldaWebsite/Views/Shared/ManagerLayout.cshtml
+++ b/ZeldaWebsite/Views/Shared/ManagerLayout.cshtml
@@ -61,6 +61,7 @@
                                     <ul id="navigation">
                                       <li><a asp-controller="Manager" asp-action="Index">Flavours</a></li>
                                         <li><a asp-controller="Manager" asp-action="Dashboard">Dashboard</a></li>
+                                        <li><a asp-controller="User" asp-action="Index">Admins</a></li>
                                         <li><a asp-controller="Home" asp-action="Index">Customer Mode</a></li>
                                    </ul>
                                 </nav>
