--- a/ZeldaWebsite/Views/Shared/ProjectLayout.cshtml
+++ b/ZeldaWebsite/Views/Shared/ProjectLayout.cshtml
@@ -93,6 +93,12 @@
                                             </a>
                                         </div>
                                     </li>
+                                    <li>
+                                        <div class="card-stor ml-10">
+                                            <a asp-controller="Home" asp-action="LogIn"> Log In
+                                            </a>
+                                        </div>
+                                    </li    >
                                 </ul>
                             </div>
                         </div>
