--- a/ZeldaWebsite/Views/Manager/Index.cshtml
+++ b/ZeldaWebsite/Views/Manager/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ZeldaWebsite.Models.Flavour>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Flavours";
     Layout = "~/Views/Shared/ManagerLayout.cshtml";
 }
 <div class="ml-55">
